// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders multi-byte character initials 1`] = `
<div
  className="box relative whiteBg"
  style={
    Object {
      "height": "",
      "width": "100%",
    }
  }
>
  <div
    className="Mask square"
    style={
      Object {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <div
      className="box relative"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "paddingBottom": "100%",
        }
      }
    >
      <img
        alt="💩 astral"
        className="img"
        onError={[Function]}
        onLoad={[Function]}
        src="https://s3-eu-west-1.amazonaws.com/nestednet-images/default-templates/avatars/company_avatar-default.jpg"
      />
    </div>
    <div
      className="wash"
    />
  </div>
</div>
`;

exports[`Avatar renders the correct size - lg 1`] = `
<div
  className="box relative whiteBg"
  style={
    Object {
      "height": 72,
      "width": 72,
    }
  }
>
  <div
    className="Mask square"
    style={
      Object {
        "height": 72,
        "width": undefined,
      }
    }
  >
    <div
      className="box relative"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "paddingBottom": "100%",
        }
      }
    >
      <img
        alt="Strava"
        className="img"
        onError={[Function]}
        onLoad={[Function]}
        src="http://pinterest.com/img/strave.png"
      />
    </div>
    <div
      className="wash"
    />
  </div>
</div>
`;

exports[`Avatar renders the correct size - md 1`] = `
<div
  className="box relative whiteBg"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
>
  <div
    className="Mask square"
    style={
      Object {
        "height": 40,
        "width": undefined,
      }
    }
  >
    <div
      className="box relative"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "paddingBottom": "100%",
        }
      }
    >
      <img
        alt="Strava"
        className="img"
        onError={[Function]}
        onLoad={[Function]}
        src="http://pinterest.com/img/strave.png"
      />
    </div>
    <div
      className="wash"
    />
  </div>
</div>
`;

exports[`Avatar renders the correct size - sm 1`] = `
<div
  className="box relative whiteBg"
  style={
    Object {
      "height": 24,
      "width": 24,
    }
  }
>
  <div
    className="Mask square"
    style={
      Object {
        "height": 24,
        "width": undefined,
      }
    }
  >
    <div
      className="box relative"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "paddingBottom": "100%",
        }
      }
    >
      <img
        alt="Strava"
        className="img"
        onError={[Function]}
        onLoad={[Function]}
        src="http://pinterest.com/img/strave.png"
      />
    </div>
    <div
      className="wash"
    />
  </div>
</div>
`;

exports[`Avatar renders the correct src 1`] = `
<div
  className="box relative whiteBg"
  style={
    Object {
      "height": "",
      "width": "100%",
    }
  }
>
  <div
    className="Mask square"
    style={
      Object {
        "height": "",
        "width": undefined,
      }
    }
  >
    <div
      className="box relative"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "paddingBottom": "100%",
        }
      }
    >
      <img
        alt="Strava"
        className="img"
        onError={[Function]}
        onLoad={[Function]}
        src="http://pinterest.com/img/strave.png"
      />
    </div>
    <div
      className="wash"
    />
  </div>
</div>
`;

exports[`Avatar renders with an empty name 1`] = `
<div
  className="box relative whiteBg"
  style={
    Object {
      "height": "",
      "width": "100%",
    }
  }
>
  <div
    className="Mask square"
    style={
      Object {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <div
      className="box relative"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "paddingBottom": "100%",
        }
      }
    >
      <img
        alt=""
        className="img"
        onError={[Function]}
        onLoad={[Function]}
        src="https://s3-eu-west-1.amazonaws.com/nestednet-images/default-templates/avatars/company_avatar-default.jpg"
      />
    </div>
    <div
      className="wash"
    />
  </div>
</div>
`;
